--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿blinker==1.9.0
+blinker==1.9.0
 click==8.3.1
 cloudpickle==3.1.2
 colorama==0.4.6
@@ -36,9 +36,7 @@ tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 Werkzeug==3.1.3
-flask
+
+# Deployment / Extras
 gunicorn
-numpy
-pandas
-scikit-learn
-joblib
+google-generativeai
